testdata/baselines/reference/submodule/conformance/checkOtherObjectAssignProperty.errors.txt
importer.js(1,21): error TS7016: Could not find a declaration file for module './mod1'. 'mod1.js' implicitly has an 'any' type.


==== importer.js (1 errors) ====
    const mod = require("./mod1");
                        ~~~~~~~~
!!! error TS7016: Could not find a declaration file for module './mod1'. 'mod1.js' implicitly has an 'any' type.
    mod.thing;
    mod.other;
    mod.prop;
    mod.bad1;
    mod.bad2;
    mod.bad3;
    
    
    mod.thing = 0;
    mod.other = 0;
    mod.prop = 0;
    mod.bad1 = 0;
    mod.bad2 = 0;
    mod.bad3 = 0;
    
==== mod1.js (0 errors) ====
    const obj = { value: 42, writable: true };
    Object.defineProperty(exports, "thing", obj);
    
    /**
     * @type {string}
     */
    let str = /** @type {string} */("other");
    Object.defineProperty(exports, str, { value: 42, writable: true });
    
    const propName = "prop"
    Object.defineProperty(exports, propName, { value: 42, writable: true });
    
    
    Object.defineProperty(exports, "bad1", { });
    Object.defineProperty(exports, "bad2", { get() { return 12 }, value: "no" });
    Object.defineProperty(exports, "bad3", { writable: true });
    